--- a/Tasks/OrchestratorV3/tsconfig.json
+++ b/Tasks/OrchestratorV3/tsconfig.json
@@ -7,6 +7,7 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "outDir": "dist"
   }
 }
